playground/notas_tests/valid/inf-04.hulk
let x:Number = 1 in let x = "a" in print(x);
