playground/notas_tests/invalid/pos-05.hulk
/*
comentario largo
*/
print(1 + "x");
